Location column added to view
The current parser is missing location of the candidates. This change prepares front end to show location. Back end change will follow.

--- a/resume_parser/parser_app/templates/base.html
+++ b/resume_parser/parser_app/templates/base.html
@@ -69,6 +69,7 @@
                 <th>Name</th>
                 <th>Email</th>
                 <th>Mobile Number</th>
+                <th>Location</th>
                 <th>Education</th>
                 <th>Company Names</th>
                 <th>Designation</th>
@@ -86,6 +87,7 @@
                   <td>{{resume.name}}</td>
                   <td>{{resume.email}}</td>
                   <td>{{resume.mobile_number}}</td>
+                  <td>Amsterdam</td>
                   <td>{{resume.education}}</td>
                   <td>{{resume.company_names}}</td>
                   <td>{{resume.designation}}</td>
