--- a/resume_parser/parser_app/templates/navbar.html
+++ b/resume_parser/parser_app/templates/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 <nav class="navbar navbar-expand-md navbar-dark bg-dark sidebarNavigation" data-sidebarClass="navbar-dark bg-dark">
     <a class="navbar-brand" href="{% url 'homepage' %}">
-        Resume Parser
+        Cansu's Resume Parser
     </a>
     <button class="navbar-toggler leftNavbarToggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
